# minecraft-ai-python

./: ._.gitignore  ._configs.json  ._model.json  ._model.py  .gitignore  CLAUDE.md  EXECUTOR.md  README.md  actions.py  agent.py  camera.py  cerebellum.py  complex.py  configs.json  configs_example.json  enhancer.py  executor.py  fall_clutch.js  install_node_modules.js  knowledge.py  lucy.json  main.py  manager.py  max.json  memory.py  minemcp.py  model.example.json  model.py  model_example.json  modes.py  package-lock.json  package.json  plugin.py  pyproject.toml  requirements.txt  run.sh  settings.json  setup-uv.sh  skills.py  state_buffer.py  (+3 more)
doc/: 01-overview.md  02-background.md  03-agent.md  04-process_messages.md  05-plan.md  06-act.md  07-actions.md  08-skills.md  README.md
generated_actions/: 20250514_155454_706853_414.json  20250514_155829_327445_044.json  20250515_120439_431827_456.json
logs/: log-20250409_125502_883330.json
monitor/: __init__.py  forum.py  server.py
monitor/templates/: index.html
patches/: mineflayer-pvp+1.3.2.patch
plugins/BuildWithBlueprint/: main.py  save.json
plugins/Dance/: main.py
plugins/Forum/: main.py
plugins/ShootWithBowAndArrow/: main.py
plugins/Task/: main.py
profiles/: emily.json  kai.json  lucy.json  max.json  pollinations.json
tutorials/: README.md  chat_with_aics.md  command_aic_to_perform_an_action.md  create_aic_profiles.md  create_customized_plugins.md  explore_aic_potentials_with_new_action.md
